--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 	<!-- Latest compiled JavaScript -->
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 
-	<link rel='stylesheet' type="text/css" href="main.css">
-	<link rel='stylesheet' type="text/css" href="style.css">
-	<script type="text/javascript" src="main.js"></script>
+	<link rel='stylesheet' type="text/css" href="css/main.css">
+	<link rel='stylesheet' type="text/css" href="css/anim.css">
+	<script type="text/javascript" src="js/main.js"></script>
 
 </head>
 <body>
