About Page, Home image fix, Contact fix left

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Services<span class="caret"></span></a>
     						<ul class="dropdown-menu">
     							<li><a href="#">B&B</a></li>
-      							<li><a href="#">Market</a></li>
+      							<li><a href="market.html">Market</a></li>
      	 						<li><a href="#">Campus News</a></li>
       							<li><a href="#">Nearby Places</a></li>
       							<li><a href="#">Promotions</a></li> 
@@ -150,28 +150,28 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 col-centered service wow animated slideInLeft">
                     <figure>
-                    <img class="img-circle img-responsive img-center service-img"src="http://placehold.it/200x200" alt="">
+                    <img class="img-circle img-responsive img-center service-img"src="images/market.jpg" alt="">
                     </figure>
                     <h3>Market</h3>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-centered service wow animated slideInLeft">
-                    <img class="img-circle img-responsive img-center service-img"src="http://placehold.it/200x200" alt="">
+                    <img class="img-circle img-responsive img-center service-img"src="images/bnb.jpg" alt="">
                     <h3>B & B</h3>
                 </div>
             </div>
             <div class="row row-centered">
                 <div class="col-lg-4 col-sm-6 col-centered service wow animated slideInLeft">
-                    <img class="img-circle img-responsive img-center service-img"src="http://placehold.it/200x200" alt="">
+                    <img class="img-circle img-responsive img-center service-img"src="images/campus.jpg" alt="">
                     <h3>Campus</h3>
                 </div>
             </div>
             <div class="row row-centered">
                 <div class="col-lg-4 col-sm-6 col-centered service wow animated slideInLeft">
-                    <img class="img-circle img-responsive img-center service-img"src="http://placehold.it/200x200" alt="">
+                    <img class="img-circle img-responsive img-center service-img"src="images/places.jpg" alt="">
                     <h3>Places</h3>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-centered service wow animated slideInLeft">
-                    <img class="img-circle img-responsive img-center service-img"src="http://placehold.it/200x200" alt="">
+                    <img class="img-circle img-responsive img-center service-img"src="images/coupon.jpg" alt="">
                     <h3>Promos</h3>
                 </div>
             </div>
@@ -192,8 +192,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="block">
-                        <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">SO WHAT YOU THINK ?</h1>
-                        <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,<br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium.</p>
+                        <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">HELP US IMPROVE</h1>
+                        <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">If you have anyfeedback regarding
+                        Auxilium,<br>Regarding any of the services, UI, UX or any other aspect</p>
                         <a href="contact.html" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact Us</a>
                     </div>
                 </div>
@@ -208,7 +209,7 @@
     <footer id="footer">
         <div class="container">
             <div class="col-md-8">
-                <a href="http://madewithlove.org.in" target="_blank">Made with <span style="color: #e74c3c">&hearts;</span> in India by Anuraag Baishya and Ishan Jain</a>
+                <a href="http://madewithlove.org.in" target="_blank">Made with <span style="color: #e74c3c!important">&hearts;</span> in India by Anuraag Baishya and Ishan Jain</a>
             </div>
             <div class="col-md-4">
                 <!-- Social Media -->
