--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                         <li class="dropdown">
     						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Services<span class="caret"></span></a>
     						<ul class="dropdown-menu">
-    							<li><a href="#">B&B</a></li>
+    							<li><a href="market.html">B&B</a></li>
       							<li><a href="market.html">Market</a></li>
-     	 						<li><a href="#">Campus News</a></li>
-      							<li><a href="#">Nearby Places</a></li>
-      							<li><a href="#">Promotions</a></li> 
+     	 						<li><a href="market.html">Campus News</a></li>
+      							<li><a href="market.html">Nearby Places</a></li>
+      							<li><a href="market.html">Promotions</a></li> 
     						</ul>
   						</li>
                         <li><a href="contact.html">Contact</a></li>
@@ -142,7 +142,7 @@
                                 <div id="icon-lost-msg" class="fa fa-arrow-right"></div>
                                 <span id="text-lost-msg">Type your e-mail.</span>
                             </div>
-                            <input id="lost_email" class="form-control" type="text" placeholder="E-Mail" required>
+                            <input id="lost_email" class="form-control" type="text" placeholder="E-Mai"l required>
                         </div>
                         <div class="modal-footer">
                             <div>
@@ -243,28 +243,28 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 col-centered service wow animated slideInLeft">
                     <figure>
-                    <img class="img-circle img-responsive img-center service-img"src="images/market.jpg" alt="">
+                    <a href="market.html"><img class="img-circle img-responsive img-center service-img"src="images/market.jpg" alt=""></a>
                     </figure>
                     <h3>Market</h3>
                 </div>
-                <div class="col-lg-4 col-sm-6 col-centered service wow animated slideInLeft">
-                    <img class="img-circle img-responsive img-center service-img"src="images/bnb.jpg" alt="">
+                <div class="col-lg-4 col-sm-6 col-centered service wow animated slideInRight">
+                    <a href="market.html"><img class="img-circle img-responsive img-center service-img"src="images/bnb.jpg" alt=""></a>
                     <h3>B & B</h3>
                 </div>
             </div>
             <div class="row row-centered">
                 <div class="col-lg-4 col-sm-6 col-centered service wow animated slideInLeft">
-                    <img class="img-circle img-responsive img-center service-img"src="images/campus.jpg" alt="">
+                    <a href="market.html"><img class="img-circle img-responsive img-center service-img"src="images/campus.jpg" alt=""></a>
                     <h3>Campus</h3>
                 </div>
             </div>
             <div class="row row-centered">
                 <div class="col-lg-4 col-sm-6 col-centered service wow animated slideInLeft">
-                    <img class="img-circle img-responsive img-center service-img"src="images/places.jpg" alt="">
+                    <a href="market.html"><img class="img-circle img-responsive img-center service-img"src="images/places.jpg" alt=""></a>
                     <h3>Places</h3>
                 </div>
-                <div class="col-lg-4 col-sm-6 col-centered service wow animated slideInLeft">
-                    <img class="img-circle img-responsive img-center service-img"src="images/coupon.jpg" alt="">
+                <div class="col-lg-4 col-sm-6 col-centered service wow animated slideInRight">
+                    <a href="market.html"><img class="img-circle img-responsive img-center service-img"src="images/coupon.jpg" alt=""></a>
                     <h3>Promos</h3>
                 </div>
             </div>
@@ -313,19 +313,6 @@
                     <img class="img-responsive img-center service-img"src="images/jquery.png" alt="">
                 </div>
             </div>
-            <div class="col-md-8">
-                <a href="http://madewithlove.org.in" target="_blank">Made with <span style="color: #e74c3c!important">&hearts;</span> in India by Anuraag Baishya and Ishan Jain</a>
-            </div>
-            <div class="col-md-4">
-                <!-- Social Media -->
-                <ul class="social">
-                    <li>
-                        <a href="https://github.com/anuraag-baishya/Auxilium" class="GitHub">
-                            <i class="fa fa-github fa-lg" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
             <div class="row row-centered wow animated fadeInDown" style="margin-bottom: 2%">
                 <div class="col-lg-10 col-sm-6 col-centered service">
                     <img class="img-responsive img-center service-img" src="http://forthebadge.com/images/badges/uses-html.svg">
@@ -334,6 +321,19 @@
                     <img class="img-responsive img-center service-img" src="http://forthebadge.com/images/badges/uses-git.svg">
                     <img class="img-responsive img-center service-img" src="http://forthebadge.com/images/badges/uses-badges.svg">
                 </div>
+            </div>
+            <div class="wow animated slideInLeft col-md-8" style="margin-top: 1%">
+                <a href="http://madewithlove.org.in" target="_blank">Made with <span style="color: #e74c3c!important">&hearts;</span> in India by Anuraag Baishya and Ishan Jain</a>
+            </div>
+            <div class="col-md-4 wow animated slideInRight">
+                <!-- Social Media -->
+                <ul class="social">
+                    <li>
+                        <a href="https://github.com/anuraag-baishya/Auxilium" class="GitHub">
+                            <i class="fa fa-github fa-lg" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer> <!-- /#footer -->
